# ai-trading-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SESSION_SUMMARY.md  docker-compose.yml  main.py  polymarket-trading-bot.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: lessons_learned.md
.claude/skills/: get_news.md  get_prices.md  research_market.md
.github/workflows/: ci.yml  security.yml
config/: markets_watchlist.yaml  risk_limits.yaml  settings.dev.yaml  settings.prod.yaml  settings.yaml
data/reports/: market_scan.json  signals_processed.json  trade_log.json
docs/: ARCHITECTURE.md  CHANGELOG.md  RUNBOOK.md  SECURITY.md  STRATEGY.md  WALLET_SETUP.md  the_perfect_polymarket_trader.md
research/: FINDINGS.md
scripts/: dashboard.py  dashboard_web.py  export_trades.py  health_check.py  setup_db.py  start_bot.sh
src/backtest/: backtester.py  data_collector.py  paper_trader.py
src/core/: bot.py  market_analyzer.py  order_manager.py  position_manager.py  risk_manager.py
src/data/: claude_code_analyzer.py  llm_analyzer.py  market_data.py  news_feed.py  odds_compiler.py  price_checker.py  sentiment.py
src/learning/: lessons.py  midnight_review.py  performance.py  strategy_tuner.py  trade_journal.py
src/reporting/: market_reporter.py
src/strategy/: base_strategy.py  convergence.py  edge_finder.py  news_reactor.py
src/utils/: config_loader.py  helpers.py  logger.py  notifications.py
tests/: conftest.py
tests/fixtures/: sample_market_data.json  sample_news_events.json  (+1 more)
(+10 files in other folders)
