[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Conservative, self-improving trading bot for Polymarket prediction markets"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.per-file-ignores]
"src/data/llm_analyzer.py" = ["E501"]  # LLM prompts need readable long lines
"scripts/dashboard_web.py" = ["E501", "S607"]  # HTML templates + pgrep path

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (may need API access)",
    "slow: Slow tests (backtesting, etc.)",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
